--- a/style.css
+++ b/style.css
@@ -24,3 +24,26 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   color: var(--dark-bg); /* Sets default text color */
 }
+
+/* HEADER */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 100px;
+    background-color: var(--dark-bg);
+    color: var(--hero-secondary-text);
+    
+}
+
+header a {
+  text-decoration: none; /* removed underline */
+  color: var(--hero-secondary-text);
+  font-size: var(--font-sm);
+}
+
+header ul {
+    display: flex;
+    list-style-type: none; /* removed bullepoints */
+    gap: 16px;
+}
