--- a/style.css
+++ b/style.css
@@ -88,3 +88,40 @@ header ul {
   justify-content: center;
   align-items: center;
 }
+
+/* INFO SECTION */
+.info-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+    gap: 32px;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+.info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 8px;
+  width: 200px;
+}
+
+.card-image-placeholder {
+  width: 150px;
+  height: 150px;
+  border: 4px solid var(--button-color);
+  border-radius: 15px;
+}
+
+.info-section h2 {
+  font-size: 36px;
+  font-weight: 900; /* Core Mechanics extra-bold */
+  color: var(--dark-bg);
+}
